defaultclient/default-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-grpc-defaultclient
  labels:
    app.kubernetes.io/name: go-grpc-defaultclient
    name: go-grpc-defaultclient
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: go-grpc-defaultclient
  template:
    metadata:
      labels:
        app.kubernetes.io/name: go-grpc-defaultclient
    spec:
      restartPolicy: Always
      containers:
      - name: go-grpc-defaultclient
        image: ${ARTIFACT_REGION}-docker.pkg.dev/${ARTIFACT_PROJECT_ID}/go-grpc-defaultclient/dev:latest
        imagePullPolicy: Always
        ports:
          - name: tcp
            containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10


---

apiVersion: v1
kind: Service
metadata:
  name: go-grpc-defaultclient
  labels:
    app.kubernetes.io/name: go-grpc-defaultclient
spec:
  selector:
    app.kubernetes.io/name: go-grpc-defaultclient
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
